@@ -42,6 +42,7 @@ VERSION 2.2.1
       dialog. (BR 136232, BR 187542)
 
   CHANGES:
+    * Use an emblem for indicating a podcast episode is on disk. (BR 209433)
     * Scanning speedups by getting rid of unnecessary code paths and
       optimizing some queries. Patch by Egbert König <e.kunig@home.nl>.
       (BR 209822)
